<resources>
    <string name="app_name">lotto-notifier</string>
    <string name="tab_text_1" translatable="false">Giocate</string>
    <string name="tab_text_2" translatable="false">Risultati</string>
    <string name="game_id">Numero giocata:</string>
    <string name="game_numbers">Numeri giocati</string>
    <string name="insert_game_numbers">Inserire numeri giocati (separati da uno spazio):</string>
    <string name="add">Aggiungi</string>
    <string name="save">Salva</string>
    <string name="refresh_list">Aggiorna lista</string>
    <string name="check_list">Controlla lista</string>
    <string name="game_date">Data</string>
    <string name="game_delete">X</string>
    <string name="random">Random</string>
    <string name="game_id_hint">(1–288)</string>
    <string name="game_date_hint">Es.: 25/08/2019</string>
    <string name="ocr_read">OCR</string>
    <string name="analyze">Analizza</string>
    <string name="reset">Reset</string>
    <string name="confirm_data">Conferma</string>
</resources>
