<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.OcrActivity">

    <TextureView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <Button
        android:id="@+id/analyze_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analyze" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/game_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_date"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/reset_date"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/game_id" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_id"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/reset_id"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_numbers" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/game_numbers"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/reset_numbers"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/confirm_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/confirm_data" />
    </LinearLayout>
</LinearLayout>